# Raspberry_IPC_Socket_UDP_Multicast

./: CMakeLists.txt  LICENSE  README.md
config/: kill_process.sh
include/: button_interface.h  led_interface.h
lib/: udp_multicast_receiver.c  udp_multicast_receiver.h  udp_multicast_sender.c  udp_multicast_sender.h
src/: button_interface.c  launch_processes.c  led_interface.c
src/platform/pc/: button_process.c  led_process.c
src/platform/raspberry/: button_process.c  led_process.c
